--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,6 @@
       <title>My Webpage!</title>
   </head>
   <body>
-    Hello, world! Hello Again! Hello Hello Hello
+    Hello, world! Hello Again!
   </body>
 </html>
