--- a/hello.html
+++ b/hello.html
@@ -4,10 +4,6 @@
       <title>My Webpage!</title>
   </head>
   <body>
-<<<<<<< HEAD
-    Hello, world! Hello Again! hello again for third time
-=======
-    Hello, world! Hello Again! Hello Hello Hello
->>>>>>> 9fdb2938b0443a86ce86761dcfde2b4707615fdb
+    Hello, world!
   </body>
 </html>
